--- a/k8sHelm/action.yml
+++ b/k8sHelm/action.yml
@@ -79,4 +79,4 @@ runs:
         shell: bash
         run: |
           set -x
-          helm -n ${{GITHUB_HEAD_REF}} upgrade --install ${{inputs.chart_name}} oci://${{inputs.registry_host_name}}/${{inputs.project_id}}/${{inputs.registry_name}}/${{inputs.chart_name}} -f ./charts/${{inputs.chart_name}}/values-${{GITHUB_HEAD_REF}}.yaml --version ${{inputs.image_tag}}
+          helm -n ${GITHUB_HEAD_REF} upgrade --install ${{inputs.chart_name}} oci://${{inputs.registry_host_name}}/${{inputs.project_id}}/${{inputs.registry_name}}/${{inputs.chart_name}} -f ./charts/${{inputs.chart_name}}/values-${GITHUB_HEAD_REF}.yaml --version ${{inputs.image_tag}}
